# lethal_downloader

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: isort.yml  pyflakes.yml
downloader/: _version.py  exceptions.py  main.py  utils.py
downloader/cli/download/: mods.py
downloader/cli/generate/: json_file.py  jsons.py
downloader/mods/: Mods.py  containers.py
downloader/tests/unit_tests/mods/: test_crossover.py
downloader/tests/unit_tests/web_driver/: test_driver_exceptions.py
downloader/web_drivers/: web.py
lethal_md/: __init__.py  example.py  exceptions.py  utils.py
lethal_md/cli/: lethal_md.py
lethal_md/cli/download/: mods.py
lethal_md/cli/generate/: jsons.py
lethal_md/mods/: Mods.py  containers.py
lethal_md/navigators/: web.py
